Fix line overflow for overly long title or descriptions

--- a/src/stylesheets/HeadlineArticles.scss
+++ b/src/stylesheets/HeadlineArticles.scss
@@ -6,6 +6,7 @@
 .headlines-container {
   background-color: $bg-clr;
   padding-bottom: 15px;
+  margin-top: 130px;
 }
 
 .primary-headline a {
